@@ -1,3 +1,8 @@
+2007-03-23  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Rename: config.h to acconfig.h
+	  Because of confliction to MySQL's config.h(maybe 5.0 or later).
+
 2007-02-28  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Rename: configure.in -> configure.ac
